adding doctor registry service

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -49,7 +49,7 @@
             <a th:href="@{/doctor_register}" class="btn btn-info btn-block" role="button">Sign up (Doctor)</a>
         </div>
         <div class="col-md-6 mb-4">
-            <a th:href="@{/doctor}" class="btn btn-info btn-block" role="button">Sign in (Doctor)</a>
+            <a th:href="@{/doctor}" class="btn btn-info btn-block" role="button">Log in (Doctor)</a>
         </div>
     </div>
 
@@ -58,7 +58,7 @@
             <a th:href="@{/patient_register}" class="btn btn-info btn-block" role="button">Sign up (Patient)</a>
         </div>
         <div class="col-md-6 mb-4">
-            <a th:href="@{/patient}" class="btn btn-info btn-block" role="button">Sign in (Patient)</a>
+            <a th:href="@{/patient}" class="btn btn-info btn-block" role="button">Log in (Patient)</a>
         </div>
     </div>
 
