--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -48,7 +48,7 @@
 
     <p class="mt-4">Join us today and take control of your health journey with HealthyMeetApp!</p>
 
-    <a th:href="@{/patient/registration}" class="btn btn-info mt-3" role="button">Sign Up Now</a>
+    <a th:href="@{/patient_register}" class="btn btn-info mt-3" role="button">Sign Up Now</a>
 
     <p class="mt-3">
         <a th:href="@{/}" class="btn btn-light" role="button">Back to Home</a>
