--- a/src/main/resources/templates/doctor_register.html
+++ b/src/main/resources/templates/doctor_register.html
@@ -45,7 +45,7 @@
                     </div>
                 </div>
                 <div class="input-group mb-3">
-                    <input type="text" class="form-control" th:field="*{userData.userName}" placeholder="Nickname">
+                    <input type="text" class="form-control" th:field="*{user.userName}" placeholder="Nickname">
                     <div class="input-group-append">
                         <div class="input-group-text">
                             <span class="fas fa-user"></span>
@@ -116,7 +116,7 @@
                     </div>
                 </div>
                 <div class="input-group mb-3">
-                    <input type="password" class="form-control" th:field="*{userData.password}" placeholder="Password">
+                    <input type="password" class="form-control" th:field="*{user.password}" placeholder="Password">
 
                     <div class="input-group-append">
                         <div class="input-group-text">
