--- a/src/main/resources/templates/patient.html
+++ b/src/main/resources/templates/patient.html
@@ -90,11 +90,19 @@
 </div>
 <div class="container text-center mt-4">
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-3">
+            <form action="/logout" th:action="@{/logout}" method="post">
+                <button class="btn btn-danger" type="submit">Logout</button>
+            </form>
+        </div>
+        <div class="col-md-3">
             <a th:href="@{/}" class="btn btn-info" role="button">Go back to the main page</a>
         </div>
         <div class="col-md-6">
             <a th:href="@{/patient/visit_history}" class="btn btn-info" role="button">Your visit history</a>
+
+        </div>
+            </div>
         </div>
     </div>
 </div>
