--- a/src/main/resources/templates/doctor_register.html
+++ b/src/main/resources/templates/doctor_register.html
@@ -53,7 +53,7 @@
                     </div>
                 </div>
                 <div class="input-group mb-3">
-                    <input type="text" class="form-control" th:field="*{salaryFor15minMeet}"
+                    <input type="text" class="form-control" th:field="*{earningsPerVisit}"
                            placeholder="Salary for 15min">
                     <div class="input-group-append">
                         <div class="input-group-text">
